<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">偷偷哒</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="properties">SlidingMenu</string>
    <string name="login">登录</string>
    <string name="seting_msg_notification">消息通知</string>
    <string name="seting_modify_password">修改密码</string>
    <string name="seting_about_us">关于我们</string>
    <string name="seting_invite_friend">邀请好友</string>
    <string name="loginout">注销登陆</string>
    <string name="shop_vip">成为会员</string>
    <string name="shop_power">购买体力</string>
    <string name="shop">商城</string>
    <string name="seting">设置</string>
    <string name="home">主页</string>
    <string name="delete">删除</string>
    <string name="menu">菜单</string>
    <string name="my_leave_msg">我的留言</string>
    <string name="leave_msg">给我留言</string>
    <string name="myattention">我的关注</string>
    <string name="attention">关注</string>
    <string name="back">返回</string>
    <string name="other_userinfo">TA的信息</string>
    <string name="my">我的</string>
    <string name="reg">注册</string>
    <string name="findpassword">找回密码</string>
    <string name="next">下一步</string>
    <string name="ranking">最强排行</string>
    <string name="group">群</string>
    <string name="quan">动态</string>
    <string name="near_people">附近</string>
    <string name="comment">发表</string>
    <string name="publish">发布</string>
    <string name="create">创建</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="buypower">购买体力</string>
    <string name="confirm">确认</string>
    <string name="ok">完成</string>
    <string name="manage">管理</string>
    <string name="girl">女</string>
    <string name="boy">男</string>
    <string name="sex_chose">性别</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="content_description_icon">icon</string>
    <string name="refresh">刷新</string>
    <string name="processing">加载中</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="redo">重试</string>
    <string name="install_msp">你尚未安装支付宝移动快捷支付服务，请立即安装</string>
    <string name="install_alipay">你尚未安装支付宝钱包，请立即安装</string>

    <string name="pressedtalk">松开 结束</string>
    <string name="normaltalk">按住 说话</string>
    <string name="filter">筛选</string>
    <string name="all">全部</string>
    <string name="_30min">30分钟</string>
    <string name="_1hour">一小时</string>
    <string name="_1day">一天</string>
    <string name="_3day">三天</string>
    <string name="jubao">举报</string>
    <string name="ziliao">资料</string>
    <string name="forget_password">忘记密码</string>
    <string name="add">添加</string>
    <string name="enter">进入</string>
    <string name="please_choise">请选择</string>
    <string name="nulls">无</string>
</resources>