<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:text="想看到的用户"
            android:textColor="@color/filter_title"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filter_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/filter_tab_left"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/all"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/filter_boy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/filter_tab_left"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/boy"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/filter_girl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/filter_tab_right"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/girl"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:text="出没时间"
            android:textColor="@color/filter_title"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filter_30min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/filter_tab_left"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/_1hour"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/filter_1hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/filter_tab_left"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/_1day"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/filter_1day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/filter_tab_left"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/_3day"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/filter_3day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/filter_tab_right"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/_week"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:text="会员筛选项"
            android:textColor="@color/filter_title"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/filter_state"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/filter_tab_top"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="状态："
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/filter_state_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="自定义"
                    android:textColor="@color/darkgray"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/ic1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/caret" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter_xing"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/filter_tab_top"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="星座："
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/filter_xing_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="自定义"
                    android:textColor="@color/darkgray"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/caret" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter_age"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/filter_tab_top"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="年龄："
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/filter_age_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="自定义"
                    android:textColor="@color/darkgray"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/caret" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter_ol"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/filter_tab_right"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="职业："
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/filter_ol_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="自定义"
                    android:textColor="@color/darkgray"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/caret" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>