<?xml version="1.0" encoding="utf-8"?>
<com.quanliren.quan_two.custom.CustomRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/crl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top"
        android:fadingEdge="none"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="15dp">

            <RelativeLayout
                android:id="@+id/userlogo_ll"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp">

                <com.quanliren.quan_two.custom.RoundImageProgressBar
                    android:layout_width="90dp"
                    android:id="@+id/round_img1"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/home_as_up_indicatosr"
                    android:visibility="gone"
                    app:border_radius="120"
                    app:border_progress="120"
                    app:border_color="@color/login_anim_color"
                    app:border_width="4dp" />

                <com.quanliren.quan_two.custom.RoundImageProgressBar
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:id="@+id/round_img2"
                    android:layout_centerInParent="true"
                    android:src="@drawable/home_as_up_indicatosr"
                    app:border_radius="270"
                    app:border_progress="180"
                    android:visibility="gone"
                    app:border_color="@color/login_anim_color"
                    app:border_width="4dp" />

                <com.quanliren.quan_two.custom.CircleImageView
                    android:id="@+id/userlogo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/defalut_logo"
                    app:border_color="#CCFFFFFF"
                    app:border_width="2dp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/margin_ll"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/userlogo_ll"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/username_ll"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/login_top_new"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="帐号："
                        android:textColor="@color/title"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/delete_username_btn"
                        android:layout_width="30dp"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:scaleType="centerInside"
                        android:src="@drawable/login_new_delete_icon"
                        android:visibility="gone" />

                    <ImageButton
                        android:id="@+id/more_username_btn"
                        android:layout_width="30dp"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:scaleType="centerInside"
                        android:src="@drawable/qz_icon_navbar_drop_down" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/login_btm_new"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="密码："
                        android:textColor="@color/title"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/delete_password_btn"
                        android:layout_width="30dp"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:scaleType="centerInside"
                        android:src="@drawable/login_new_delete_icon"
                        android:visibility="gone" />
                </LinearLayout>

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/login_btn_new"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/regBtn"
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/reg"
                        android:textColor="@color/title"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/tiao" />

                    <TextView
                        android:id="@+id/forgetpassword"
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/forget_password"
                        android:textColor="@color/title"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</com.quanliren.quan_two.custom.CustomRelativeLayout>